# gamegirl

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  gamegirl.cpp
.github/workflows/: build.yml  ci.yml  linter.yml
app/: CMakeLists.txt  main.cpp  tracer.hpp
emulator/: CMakeLists.txt
emulator/ggemu/: cartridge.cpp  cartridge.hpp  emulator.cpp  emulator.hpp  logger.cpp  logger.hpp  memory.cpp  memory.hpp  register.hpp  types.hpp
tests/: CMakeLists.txt  memory.cpp  register.cpp
